# Banshee

./: .gitignore  CMakeLists.txt  README.md  dump.sh  erase.sh  flash.sh  plot.sh  sdkconfig  sensor.sh  suction_skirt_memo.md  trace.sh  tuning.md  update_param.sh  update_param_cl.sh
csv/: pyplot.py  sensor.sh
main/: CMakeLists.txt  main.cpp
main/include/: adachi.hpp  as5147p.hpp  defines.hpp  enums.hpp  icm20689.hpp  kalman_filter.hpp  logging_task.hpp  logic.hpp  lsm6dsr.hpp  main_task.hpp  maze_solver.hpp  motion_planning.hpp  path_creator.hpp  planning_task.hpp  sensing.hpp  sensing_task.hpp  structs.hpp  ui.hpp
main/search/: adachi.cpp  logic.cpp  search_controller.cpp
main/task/: as5147p.cpp  backup_sensing.cpp  kalman_filter.cpp  logging_task.cpp  lsm6dsr.cpp  main_task.cpp  motion_planning.cpp  path_creator.cpp  planning_task.cpp  sensing.cpp  sensing_task.cpp  ui.cpp
pcb/: Banshee.brd  Banshee.sch  BansheeNornV5.brd  BansheeNornV5.sch
ros_ws/: hello.sh
ros_ws/src/maze_solver/: CMakeLists.txt  package.xml
ros_ws/src/maze_solver/include/maze_solver/: search
ros_ws/src/maze_solver/launch/: hello.xml
ros_ws/src/maze_solver/src/: hello.cpp  search
tools/matlab_ws/: readme.md
tools/param_tuner/: hardware.yaml  higashinihon.txt  maze.yaml  offset.yaml  package-lock.json  package.json  profile.xml  rx_term.js  sensor.js  tsconfig.json  tx_term.js  write_maze_data.js
tools/param_tuner/mcap_py/: README.md  main.py  pyproject.toml
tools/slalom/: main.py  plot.py  plotorval.py  replace.sh  result.yaml  sim.sh  sim_replace.sh  slalom.py  slalom2.py  (+1 more)
(+95 files in other folders)
