[project]
name = "mcap-py"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Naophis", email = "nao1288stusj@gmail.com" }
]
dependencies = [
    "pandas~=2.0.3",
    "numpy~=1.24.4",
    "mcap~=1.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
